--- a/NetSignal/NetSignal.csproj
+++ b/NetSignal/NetSignal.csproj
@@ -68,15 +68,18 @@
     <Compile Include="ConnectionUpdater.cs" />
     <Compile Include="FloatDataPackage.cs" />
     <Compile Include="IncomingSignal.cs" />
+    <Compile Include="KeepAlivePackage.cs" />
     <Compile Include="Logging.cs" />
     <Compile Include="MatchmakingConnectionUpdater.cs" />
     <Compile Include="MessageDeMultiplexer.cs" />
     <Compile Include="NetSignalStarter.cs" />
     <Compile Include="OutgoingSignal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReliableSignalUpdater.cs" />
     <Compile Include="SignalCompressor.cs" />
-    <Compile Include="SignalUpdater.cs" />
+    <Compile Include="SignalUpdaterUtil.cs" />
     <Compile Include="StateOfConnection.cs" />
+    <Compile Include="UnreliableSignalUpdater.cs" />
     <Compile Include="Util.cs" />
   </ItemGroup>
   <ItemGroup>
