implement matchmaking server keepalive update

--- a/NetSignal/NetSignal.csproj
+++ b/NetSignal/NetSignal.csproj
@@ -75,6 +75,7 @@
     <Compile Include="MatchmakingConnectionUpdater.cs" />
     <Compile Include="MessageDeMultiplexer.cs" />
     <Compile Include="NetSignalStarter.cs" />
+    <Compile Include="NetSignalTests.cs" />
     <Compile Include="OutgoingSignal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReliableSignalUpdater.cs" />
