--- a/NetSignal/packages.config
+++ b/NetSignal/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.4.4" targetFramework="net471" />
+  <package id="MathNet.Numerics" version="4.15.0" targetFramework="net471" />
   <package id="Newtonsoft.Json" version="8.0.1" targetFramework="net471" />
 </packages>
