comment open.nat, temp use same udp socket for everytgibng in server

--- a/NetSignal/packages.config
+++ b/NetSignal/packages.config
@@ -3,4 +3,5 @@
   <package id="EntityFramework" version="6.4.4" targetFramework="net471" />
   <package id="MathNet.Numerics" version="4.15.0" targetFramework="net471" />
   <package id="Newtonsoft.Json" version="8.0.1" targetFramework="net471" />
+  <package id="Open.NAT" version="2.1.0.0" targetFramework="net471" />
 </packages>
